--- a/templates/base.html
+++ b/templates/base.html
@@ -36,9 +36,6 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-
-<body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
@@ -51,37 +48,17 @@
       <nav id="navbar" class="navbar">
             <ul>
                 <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                <li><a class="nav-link scrollto" href="#about">About Us</a></li>
+                <li><a class="nav-link scrollto" href="{% url 'about_us' %}">About Us</a></li>
                 <li><a class="nav-link scrollto" href="#services">WSF Operations</a></li>
-                <li><a class="nav-link scrollto o" href="#portfolio">Announcement</a></li>
+                <li><a class="nav-link scrollto" href="{% url 'announcements' %}">Announcement</a></li>
                 <li><a class="nav-link scrollto" href="#team">Testimonies</a></li>
                 <li><a class="nav-link scrollto" href="#pricing">Kingdom Advancement Prayers</a></li>
                 <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
-                <li><a class="getstarted scrollto" href="#about">Login</a></li>
+                <li><a class="getstarted scrollto" href="{% url 'login' %}">Login</a></li>
             </ul>
         </nav>
     </div>
   </header><!-- End Header -->
-
-   {% block content %}
-   {% endblock content %}
-
-
-  <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="{% static 'assets/vendor/purecounter/purecounter_vanilla.js' %}"></script>
-  <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
-  <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
-
-  <!-- Template Main JS File -->
-  <script src="{% static 'assets/js/main.js' %}"></script>
-
-</body>
-
 </html>
+{% block content %}
+{% endblock content %}
