--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -27,6 +27,8 @@
                     {{ form.password }}
                   </div>
                   <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+                  <a class="nav-link scrollto" href="{% url 'password_change' %}">Click to change password</a>
+                  <a class="nav-link scrollto" href="{% url 'password_change' %}">Click to reset password</a>
                 </form>
               </div>
               <!-- Checkbox -->
