--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,2 +1,15 @@
-lfc umoji started during the wonder double spread
 
+{% extends 'base.html' %}
+
+
+{% block content %}
+
+  <section>
+    <br>
+    <p> lfc umoji started during the wonder double spread </p>
+  </section>        
+
+
+  
+
+{% endblock content %}
