--- a/templates/base.html
+++ b/templates/base.html
@@ -47,14 +47,14 @@
         
       <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                <li><a class="nav-link scrollto" href="{% url 'about_us' %}">About Us</a></li>
-                <li><a class="nav-link scrollto" href="#services">WSF Operations</a></li>
-                <li><a class="nav-link scrollto" href="{% url 'announcements' %}">Announcement</a></li>
-                <li><a class="nav-link scrollto" href="#team">Testimonies</a></li>
-                <li><a class="nav-link scrollto" href="#pricing">Kingdom Advancement Prayers</a></li>
-                <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
-                <li><a class="getstarted scrollto" href="{% url 'login' %}">Login</a></li>
+              <li><a class="nav-link scrollto active" href="{% url 'home' %}">Home</a></li>
+              <li><a class="nav-link scrollto" href="{% url 'about_us' %}">About Us</a></li>
+              <li><a class="nav-link scrollto" href="{% url 'wsf_operations' %}">WSF Operations</a></li>
+              <li><a class="nav-link scrollto" href="{% url 'announcements' %}">Announcement</a></li>
+              <li><a class="nav-link scrollto" href="{% url 'testimonies' %}">Testimonies</a></li>
+              <li><a class="nav-link scrollto" href="{% url 'kingdom_advancement_prayers' %}">Kingdom Advancement Prayers</a></li>
+              <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
+              <li><a class="getstarted scrollto" href="{% url 'login' %}">Login</a></li>
             </ul>
         </nav>
     </div>
