--- a/templates/wsf_update.html
+++ b/templates/wsf_update.html
@@ -1,7 +1,7 @@
 {% extends 'pastor_desk.html' %}
 {% block content %}
 <section>
-    <h1>New Announcement</h1>
+    <h1>New Wsf Update</h1>
     <form action="" method="post">{% csrf_token %}
         {{ form.as_p }}
         <button class="btn btn-success ml-2" type="submit">Save</button>
