--- a/templates/announcements.html
+++ b/templates/announcements.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
 {% block title %}Announcements{% endblock title %}
 {% block content %}
-    {% for umoji in object_list %}
+{% for umoji in object_list %}
     <section>
         <div class="card">
             <div class="card-header">
                 <span class="font-weight-bold">{{ umoji.title }}</span> &middot;
-                <span class="text-muted">by {{ umoji.author }}|</span>
+                <span class="text-muted">by {{ umoji.author }}|{{ umoji.date }}</span>
             </div>
             <div class="card-body">
-            {{ umoji.body }}
-            </div>
-            <div class="card-footer text-center text-muted">
-            <a href="#">Edit</a> | <a href="#">Delete</a>
+            {{ umoji.body|truncatewords:20 }}
+                <a href="{% url 'info_update_edit' umoji.pk %}">Edit</a> | <a href="{% url 'info_update_delete' umoji.pk %}">Delete</a>| <a href="{% url 'info_update_detail' umoji.pk %}">click for complete post</a>
             </div>
         </div>
         <br />
