--- a/templates/media_update.html
+++ b/templates/media_update.html
@@ -1,9 +1,12 @@
-{% extends 'pastor_desk.html' %}
+<!-- templates/media_update_delete.html -->
+{% extends 'workers.html' %}
 {% block content %}
 <section>
-    <h1>New Announcement</h1>
+    <h1>New Testimonies</h1>
     <form action="" method="post">{% csrf_token %}
         {{ form.as_p }}
         <button class="btn btn-success ml-2" type="submit">Save</button>
 </section>
 {% endblock content %}
+
+
