--- a/templates/ushers_report.html
+++ b/templates/ushers_report.html
@@ -6,7 +6,7 @@
         <div class="card">
             <div class="card-header">
                 <span class="font-weight-bold">{{ umoji.message_title }}</span> &middot;
-                <span class="text-muted">by {{ umoji.author }}|{{ umoji.date }}</span>
+                <span class="text-muted">by {{ umoji.author }}|<p><b>Post created on</b></p>{{ umoji.date }}</span>
             </div>
             <div class="card-body">
                 <p><b>Service Sequence:</b></p>{{ umoji.service_sequence}}
@@ -20,6 +20,10 @@
                 <p><b>Income Report:</b></p>{{ umoji.Income_report }}
                 <p><b>Usher's Comment:</b></p>{{ umoji.body|truncatewords:20 }}
                 <a href="{% url 'ushers_update_edit' umoji.pk %}">Edit</a> | <a href="{% url 'ushers_update_delete' umoji.pk %}">Delete</a>| <a href="{% url 'ushers_update_detail' umoji.pk %}">click for complete post</a>
+                <p><b>Post created on</b></p>{{ umoji.date }}
+                {% if umoji.date != umoji.edited %}
+                    <p><b>This post was edited on {{umoji.edited}}</b> </p>
+                {% endif %}
             </div>
         </div>
         <br />
