--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -6,10 +6,36 @@
 
   <section>
     <br>
-    <p> lfc umoji started during the wonder double spread </p>
+    <h1><b>THE MANDATE</b></h1>
+    <p> David Oyedepo received a mandate from God in an 18 hour long vision in May 1981 to liberate the world from all oppression of the devil through the preaching of the word of faith. This is the inaugural vision that led to the founding of the Living Faith Church World Wide (LFCWW), first called Liberation Faith Hour Ministries, in 1981. Two years after, on September 17, 1983, Pastor Enoch Adeboye, the General Overseer of the Redeemed Christian Church of God, ordained David Oyedepo and his wife, Florence Abiola Akano (now known as Faith Abiola Oyedepo) as pastors and also officially commissioned the newly started church. Five years after, David Oyedepo was ordained a Bishop.
+
+      Living Faith Church (AKA Winners Chapel) started in Kaduna, but David Oyedepo moved to Lagos, the former capital of Nigeria in September 1989, to start a new branch after receiving an instruction from God to reach out to the population in Lagos. This Church in Lagos grew to become the International headquarters of Living Faith Church, with a constantly increasing flow of crowds spilling over to adjacent roads, and on decks of uncompleted buildings nearby, compelling people to stand for hours to listen to his teachings. This led to the building of the renowned Faith Tabernacle, as instructed by God.
+      
+      David Oyedepo is an acclaimed author and publisher who has written over 70 titles apart from periodicals.  He is also Chairman/Publisher of Dominion Publishing House (DPH), a publishing arm of his ministry.  DPH has over 4 million prints in circulation to date. Through God’s grace upon him, Covenant University, Landmark University, Faith Academy and Kingdom Heritage Model Schools have been established to equip the youth for impact.
+       </p>
+    <h1><b>Bishop David Oyedepo</b></h1>
+    <p> On September 27, 1954, Bishop David Olaniyi Oyedepo, a native of Omu-Aran, Kwara State, Nigeria, was born in Osogbo into a religiously mixed family. His father, Ibrahim, was a Muslim healer, while his mother, Dorcas, was a member of the Eternal Order of the Cherubim and Seraphim Movement (C&S), a branch of the Aladura Movement in Nigeria. He was raised by his grandmother in Osogbo, who inculcated in him the virtues of Christian life through the early morning prayers which he attended with her. She also taught him the importance of tithing and other basic Christian virtues.
+
+      David Oyedepo was “born again” in 1969 through the influence of his former teacher, Ms. Betty Lasher, who took special interest in him during his high school days. He studied Architecture at Kwara State Polytechnic, Ilorin and worked briefly with the Federal Ministry of Housing in Ilorin before resigning to concentrate on missionary work.  David Oyedepo also earned a Ph.D. in Human Development from Honolulu University, Hawaii, United States of America.
+      In 1982 he married Florence Abiola Akano (now known as Faith). They have four children together (David Jr., Isaac, Love and Joys). David Jr. and Isaac Oyedepo were ordained as Pastors in May 2007 by Kenneth Copeland. David Jr. is the Resident Pastor of Faith Tabernacle, Ota, Nigeria, while Isaac Oyedepo is the current Resident Pastor of Winners Chapel International, Maryland
+    </p>
+    
+    <h1><b>Faith Tabernacle</b></h1>
+    <p>The largest church auditorium in the world
+
+      In 1998, David Oyedepo set forth to build a new building to accommodate the increasing number of worshippers. This resulted in the Ministry’s acquisition of the initial 530-acre (2.1 km2) facility, known as Canaanland, which serves as the headquarters of the Ministry. It is the home of the 50,000-seat capacity auditorium, the ‘Faith Tabernacle’, which is reputed to be the largest Church auditorium in the world; a feat also recorded in the Guinness Book of Records.
+      *Living Faith Church, UMUOJI, INDEPENDENCE LAYOUT* was planted during the plating of 10,000 church planting in spite of Covid-19 noise-some pestilence. We had our 1st Sunday Service with only 7members, *Nov 12, 2020* and today the Lord of the Harvest (Holy Spirit) is still increasing us daily...
+      
+    </p>
+    <h1><b>Pastor UGOCHUKWU ONYINYECHI</b></h1>
+    <p>Resident Pastor – Winners Chapel Umuoji
+
+      Ugochukwu Onyinyechi is the Pastor of Winners’ Chapel Umoji. As a graduate of Federal University of Technology Owerri, Imo State -Nigeria  he is an extension of one mandate to multiple generations. God delivered a mandate to his Spiritual father, Bishop David Oyedepo on the 1st and 2nd of May 1981 to deliver the world from all oppressions through the preaching of the Word of Faith.
+      He teaches the Word of Faith with simplicity yet carries the fire of the Holy Spirit to his generation with proofs of signs, wonders, and miracles. He lives with his wife and Son.
+      </p>
+
   </section>        
-
-
+ 
   
 
 {% endblock content %}
