--- a/templates/announcements.html
+++ b/templates/announcements.html
@@ -6,11 +6,14 @@
         <div class="card">
             <div class="card-header">
                 <span class="font-weight-bold">{{ umoji.title }}</span> &middot;
-                <span class="text-muted">by {{ umoji.author }}|{{ umoji.date }}</span>
+                <span class="text-muted">by {{ umoji.author }}|<p><b>Post created on</b></p>{{ umoji.date }}</span>
             </div>
             <div class="card-body">
             {{ umoji.body|truncatewords:20 }}
                 <a href="{% url 'info_update_edit' umoji.pk %}">Edit</a> | <a href="{% url 'info_update_delete' umoji.pk %}">Delete</a>| <a href="{% url 'info_update_detail' umoji.pk %}">click for complete post</a>
+            {% if umoji.date != umoji.edited %}
+                <p><b>This post was edited on {{umoji.edited}}</b> </p>
+            {% endif %}
             </div>
         </div>
         <br />
