--- a/templates/cmc_report.html
+++ b/templates/cmc_report.html
@@ -6,7 +6,7 @@
         <div class="card">
             <div class="card-header">
                 <span class="font-weight-bold">{{ umoji.message_title }}</span> &middot;
-                <span class="text-muted">by {{ umoji.author }}|{{ umoji.date }}</span>
+                <span class="text-muted">by {{ umoji.author }}|<p><b>Post created on</b></p>{{ umoji.date }}</span>
             </div>
             <div class="card-body">
                 <p><b>Service Sequence:</b></p>{{ umoji.service_sequence}}
@@ -20,6 +20,9 @@
                 <p><b>Income Report:</b></p>{{ umoji.Income_report }}
                 <p><b>CMC's Comment:</b></p>{{ umoji.body|truncatewords:20 }}
                 <a href="{% url 'cmc_update_edit' umoji.pk %}">Edit</a> | <a href="{% url 'cmc_update_delete' umoji.pk %}">Delete</a>| <a href="{% url 'cmc_update_detail' umoji.pk %}">click for complete post</a>
+            {% if umoji.date != umoji.edited %}
+                <p><b>This post was edited on {{umoji.edited}}</b> </p>
+            {% endif %}
             </div>
         </div>
         <br />
@@ -27,4 +30,5 @@
 
 {% endfor %}
 {% endblock content %}
+
 
