--- a/templates/home.html
+++ b/templates/home.html
@@ -31,11 +31,7 @@
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: OnePage - v4.8.1
-  * Template URL: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+ 
   ======================================================== -->
 </head>
   <!-- ======= Header ======= -->
@@ -55,7 +51,7 @@
                 <li><a class="nav-link scrollto" href="{% url 'announcements' %}">Announcement</a></li>
                 <li><a class="nav-link scrollto" href="{% url 'testimonies' %}">Testimonies</a></li>
                 <li><a class="nav-link scrollto" href="{% url 'kingdom_advancement_prayers' %}">Kingdom Advancement Prayers</a></li>
-                <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
+             
                 <li><a class="getstarted scrollto" href="{% url 'login' %}">Login</a></li>
             </ul>
         </nav>
@@ -73,6 +69,199 @@
         </div>
       </div>
 
+
+
+<!-- ======= About Video Section ======= -->
+<section id="about-video" class="about-video">
+  <div class="container" data-aos="fade-up">
+
+    <div class="row">
+
+      <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
+        <img src="{% static 'assets/img/umoji-pic-3.jpg' %}" class="img-fluid" alt="">
+      </div>
+
+      <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+        <h3><b>You were meant to enjoy a life free in Christ.</b></h3>
+        <p class="fst-italic">
+          <b>Take your first step toward's it</b>
+          
+          We exist to bring God's freedom to everyone. We love to care for people who have been hurt. This is our mandate.
+        <ul>
+          <li><i class="bx bx-check-double"></i><b>Sunday Morning Worship: 1st Service: 6am, 2nd Service: 8am<</b>/li>
+          <li><i class="bx bx-check-double"></i><b>Communion Service: Wednesdays at 5pm.</b></li>
+          <li><i class="bx bx-check-double"></i><b>Main Location: Conference Hall, Fontana Hotel, Nwafia Street by Agricbank B/Stop, Independence Layout.</b></li>
+        </ul>
+      </div>
+
+    </div>
+
+  </div>
+</section><!-- End About Video Section -->
+<!-- ======= Services Section ======= -->
+<section id="services" class="services section-bg">
+  <div class="container" data-aos="fade-up">
+
+    <div class="section-title">
+      <h2><b>12 PILLARS</b></h2>
+      <p>God commissioned the presiding Bishop of this commission with a Word of Faith ministry to our generation. Remember Paul said, "...if the trumpet give an uncertain sound, who shall prepare himself to the battle?" (1 Cor 14:8) As a Commission, we have experienced amazing testimonies ever since this commission was handed down - that is over thirty years now! The Holy Ghost further inspired the servant of God, Dr. David Oyedepo, to classify the Word of Faith He has committed into his hands into the specific areas of emphasis, in direct response to Isaiah 40:6, "The voice said, Cry. And he said, What shall I cry?..." He has named these 12 areas of emphasis as the 12 Pillars of our Commission. We have crossed Jordan into power, bearing the ark of liberation. Here are the 12 stones, after the order of Joshua 4:1-8, 20-24. Having stood firm upon these twelve stones! And they have resulted in breakthroughs - both for the ministry and all that are partakers with us, of the same grace.</p>
+    </div>
+
+    
+      <div class="row">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+          <div class="icon-box iconbox-blue">
+          <h4><b>THE HOLY SPIRIT</b></h4>
+          <p>
+            "And it shall come to pass in that day, that his burden shall be taken away from off thy shoulder, and his yoke from off thy neck, and the yoke shall be destroyed because of the anointing." (Acts 1:1-8; Isaiah 10:27)
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+        <div class="icon-box iconbox-pink">
+            <h4><b>FAITH</b></h4>
+            <p>
+              "For whatsoever is born of God overcometh the world: and this is the victory that overcometh the world, even our faith." (1 John 5:4; Ephesians 6:16)
+            </p>
+          </div>
+        </div>
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+        <div class="icon-box iconbox-pink">
+          <h4><b>THE SUPERNATURAL</b></h4>
+          <p>"The wind bloweth where it listeth, and thou hearest the sound thereof, but canst not tell whence it cometh, and whither it goeth: so is every one that is born of the Spirit." (Psalm 82:5-7; John 3:8)</p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+        <div class="icon-box iconbox-yellow">
+          <h4><b>VISION</b></h4>
+          <p> 
+            "Where there is no vision, the people perish: but he that keepeth the law, happy is he." (Proverbs 29:18, Jer. 29:11),
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+        <div class="icon-box iconbox-red">
+          <h4><b>PRAYER</b></h4>
+          <p>
+            "And this is the confidence that we have in him, that, if we ask anything according to his will, he heareth us." (1 John 5:14)
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+        <div class="icon-box iconbox-teal">
+          <h4><b> HEALING</b></h4>
+          <p>
+            "That it might be fulfilled which was spoken by Esaias the prophet, saying, Himself took our infirmities, and bare our sicknesses." (Isaiah 53:3-4; Jer. 8:22; Matt. 8:17)
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="icon-box iconbox-blue">
+            <h4><b> WISDOM </b></h4>
+            <p>
+              "And wisdom and knowledge shall be the stability of thy times, and strength of salvation: the fear of the Lord is his treasure." (Prov. 24:3-4, Isaiah 33:6)
+            </p>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+          <div class="icon-box iconbox-orange ">
+            <h4><b>CONSECRATION</b></h4>
+            <p>
+              "Nevertheless the foundation of God standeth sure, having this seal, the Lord knoweth them that are his. And let every one that nameth the name of Christ depart from iniquity." (Hebrews 12:14; 2 Tim. 2:19)
+            </p>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+          <div class="icon-box iconbox-pink">
+            <h4><b>SUCCESS</b></h4>
+            <p>
+              "This book of the law shall not depart out of thy mouth; but thou shalt meditate therein day and night, that thou mayest observe to do according to all that is written therein: for then thou shalt make thy way prosperous, and then thou shalt have good success." (Joshua 1:8-10)
+            </p>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="icon-box iconbox-yellow">
+            <h4><b>PRAISE</b></h4>
+            <p> 
+              "And when they began to sing and to praise, the Lord set ambushments against the children of Ammon, Moab, and mount Seir, which were come against Judah: and they were smitten." (2 Chro. 20:20-22; Psalm 67:1-7; 149:1-9)
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+          <div class="icon-box iconbox-teal">
+              <h4><b>THE WORD</b></h4>
+              <p>
+                "Who being the brightness of his glory, and the express image of his person, and upholding all things by the word of his power..." (John 1:1-12; Hebrews 1:3)
+              </p>
+            </div>
+          </div>
+  
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+          <div class="icon-box iconbox-teal">
+            <h4><b>PROSPERITY</b></h4>>
+            <p>
+              "Beloved, I wish above all things that thou mayest prosper and be in health, even as thy soul prospereth." 3 John 2. "Cry yet, saying, Thus saith the Lord of hosts; My cities through prosperity shall yet be spread abroad..." (3 John 2; Psalm 35:27; Zech. 1:17)
+            </p>
+          </div>
+        </div>
+    </div>
+
+  </div>
+
+
+<!-- ======= Team Section ======= -->
+<section id="team" class="team section-bg">
+  <div class="container" data-aos="fade-up">
+
+    <div class="section-title">
+      <p> Join us to enjoy heartfelt worship.</p>
+    </div>
+
+    <div class="row">
+
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+        <div class="member">
+          <div class="member-img">
+            <img src="{% static 'assets/img/team/umoji-pic-1.jpg' %}" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+        <div class="member">
+          <div class="member-img">
+            <img src="{% static 'assets/img/team/umoji-pic-2.jpg' %}" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+        <div class="member">
+          <div class="member-img">
+            <img src="{% static 'assets/img/team/umoji-pic-4.jpg' %}" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+        <div class="member">
+          <div class="member-img">
+            <img src="{% static 'assets/img/team/umoji-pic-5.jpg' %}" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
  <br><br><br>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -80,6 +269,9 @@
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <p>You can also reach us through: 07064452476, 08036949242</p>
+        <br><br><br><br><br><br><br>
+        <p>Cotact the developer of this site via daviddanielcareer@gmail.com</p>
       </div>
     </div>
   </footer><!-- End Footer -->
