--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -28,7 +28,7 @@
                   </div>
                   <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
                   <a class="nav-link scrollto" href="{% url 'password_change' %}">Click to change password</a>
-                  <a class="nav-link scrollto" href="{% url 'password_change' %}">Click to reset password</a>
+                  <a class="nav-link scrollto" href="{% url 'password_reset' %}">Click to reset password</a>
                 </form>
               </div>
               <!-- Checkbox -->
@@ -52,12 +52,6 @@
       </div>
     </div>
   </section>
-
-<!--
-  <form method="post">
-{% csrf_token %} {{ form.as_p }}
-<button type="submit">Log In</button>
-</form> -->
 {% endblock content %}
 
 
