--- a/templates/workers.html
+++ b/templates/workers.html
@@ -72,6 +72,7 @@
               
               <li><a href="{% url 'wsf_report' %}">WSF Report</a></li>
               <li><a href="http://127.0.0.1:8000/admin">Admin</a></li>
+              <li> <a class="nav-link scrollto" href="{% url 'password_change' %}">Click to change password</a></li>
             </ul>
           </li>
           <li><a class="getstarted scrollto" href="{% url 'logout' %}">Logout</a></li>
