--- a/templates/home.html
+++ b/templates/home.html
@@ -32,15 +32,14 @@
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 
  
-  ======================================================== -->
 </head>
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="home.html">LFC UMOJI</a></h1>
+      <h1 class="logo"><a href="#">LFC UMOJI</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="home.html" class="logo">
+      <a href="#" class="logo">
       <img src="{% static 'assets/img/lfc-logo.png' %}" alt="" class="img-fluid">
         
       <nav id="navbar" class="navbar">
@@ -54,6 +53,7 @@
              
                 <li><a class="getstarted scrollto" href="{% url 'login' %}">Login</a></li>
             </ul>
+            <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
     </div>
   </header><!-- End Header -->
