--- a/templates/base.html
+++ b/templates/base.html
@@ -40,10 +40,9 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="home.html">LFC UMOJI</a></h1>
+      <h1 class="logo"><a href="#">LFC UMOJI</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="home.html" class="logo">
-      <img src="{% static 'assets/img/lfc-logo.png' %}" alt="" class="img-fluid">
+      
         
       <nav id="navbar" class="navbar">
             <ul>
@@ -56,9 +55,28 @@
               
               <li><a class="getstarted scrollto" href="{% url 'login' %}">Login</a></li>
             </ul>
+            <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
     </div>
   </header><!-- End Header -->
 </html>
 {% block content %}
 {% endblock content %}
+
+<div id="preloader"></div>
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+<!-- Vendor JS Files -->
+<script src="{% static 'assets/vendor/purecounter/purecounter_vanilla.js' %}"></script>
+<script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
+<script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
+<script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+<script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
+<script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
+
+<!-- Template Main JS File -->
+<script src="{% static 'assets/js/main.js' %}"></script>
+
+
+  
