--- a/templates/pastor_desk.html
+++ b/templates/pastor_desk.html
@@ -56,11 +56,7 @@
           <li><a class="nav-link scrollto o" href="{% url 'wsf_update' %}">wsf_update</a></li>
           <li><a class="nav-link scrollto" href="{% url 'kap_update' %}">kap_update</a></li>
           
-          <li class="dropdown"><a href="{% url 'church_update' %}"><span> Church Monthly Report</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-
-            
-              </li>
+          <li class="dropdown"><a href="{% url 'church_update' %}"><span> Church Monthly Report</span> <i class="bi bi-chevron-down"></i></a></li>
           <li><a class="getstarted scrollto" href="{% url 'logout' %}">Logout</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -72,22 +68,4 @@
   {% block content %}
   {% endblock content %}
 
-
-  <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="{% static 'assets/vendor/purecounter/purecounter_vanilla.js' %}"></script>
-  <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
-  <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
-
-  <!-- Template Main JS File -->
-  <script src="{% static 'assets/js/main.js' %}"></script>
-
-</body>
-
-</html>
+  
